Mailman - The GNU Mailing List Management System
Copyright (C) 1998-2010 by the Free Software Foundation, Inc.
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA

Here is a history of user visible changes to Mailman.

2.1.15 (xx-xxx-xxxx)

  i18n

    - Fixed a missing format character in the Spanish translation.
      Bug #670988.

  Bug Fixes and other patches

    - Fixed a problem where an emailed command in the Subject: header with a
      non-ascii l10n of an 'Re:' prefix is ignored.  Bug #685261.

    - Fixed a problem with approving a post by email when the body of the
      approval mail is base64 encoded.  Bug #677115.

    - Fixed the host name in the From: address of the owner notification from
      bin/add_members.  Bug #666181.

2.1.14 (20-Sep-2010)

  Security

    - Two potential XSS vulnerabilities have been identified and fixed.

  New Features

    - A new feature for controlling the addition/replacement of the Sender:
      header in outgoing mail has been implemented.  This allows a list owner
      to set include_sender_header on the list's General Options page in the
      admin GUI.  The default for this setting is Yes which preserves the prior
      behavior of removing any pre-existing Sender: and setting it to the
      list's -bounces address.  Setting this to No stops Mailman from adding or
      modifying the Sender: at all.

      Additionally, there is a new Defaults.py/mm_cfg.py setting
      ALLOW_SENDER_OVERRIDES which defaults to Yes but which can be set to No
      to remove the include_sender_header setting from General Options, and
      thus preserve the prior behavior completely.

    - Bounce processing has been enhanced so that if a bounce is returned to a
      list from a non-member who is a member of a regular_include_list, the
      bounce will be processed as a bounce for the included list.

  i18n

    - Fixed a missing format character in the German bin/mailmanctl docstring.
